# app/Http/Controllers/ProductController.php
@@ -7,6 +7,7 @@ use App\Http\Requests\Pagination;
 use App\Models\Product;
 use App\Services\ProductService;
 use Illuminate\Http\Request;
+use OpenApi\Attributes as OAT;
 
 class ProductController extends Controller
 {
@@ -22,9 +23,23 @@ class ProductController extends Controller
         return view('products/create');
     }
 
+    #[OAT\Get(
+        path: '/api/products/list',
+        tags: ['products'],
+        description: 'Get products paginated or not',
+        parameters: [
+            new OAT\Parameter(name:'paginated', description: 'A flag to retrieve all products in one response or a paginated response', required: false, in: 'query'),
+            new OAT\Parameter(name: 'page', description: 'Page of the elements to retrieve from the paginator', required: false, in:'query'),
+            new OAT\Parameter(name: 'query', description: 'Keyword to search products', required: false, in:'query')
+        ],
+        responses: [
+            new OAT\Response(response: 200,description: 'Paginated instance or array with all items'),
+        ]
+    )]
     function find(Pagination $request, ProductService $productService){
         $paginated = $request->query('paginated', true);
-        return response()->json($productService->findAll($paginated));
+        $querySearch = $request->query('query', '');
+        return response()->json($productService->findAll($paginated, $querySearch));
     }
 
     function findOne(string $slug, ProductService $productService){
